@@ -1,3 +1,10 @@
+2008-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* test/common.py:
+	* test/test_module.py:
+	* test/test_stdlib.py:
+	  Switch to mixedCase as Neil prefers.
+
 2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* pychecker/checker.py:
